fix teaching research and resource

--- a/course/dl4mt21fa/course_policy.html
+++ b/course/dl4mt21fa/course_policy.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
+    <meta name="author" content="Lei Li" />
     <title>Course Policy</title>
   </head>
   <body>
