--- a/index.html
+++ b/index.html
@@ -14,25 +14,20 @@
       <ul class="menu">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="research.html">Research</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
         <li><a href="pubs.html">Publications</a></li>
-        <li><a href="software.html">Software</a></li>
-        <li><a href="talks.html">Talks</a></li>
+        <li><a href="resource.html">Resource</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
       </ul>
-      <div class="row smaller">
+      <div class="row">
         <div class="col c2"> <img src="leili-pic1.jpg" alt="" width="160" /> </div>
         <div class="col c10">
-          <h1> <a href="index.html">Lei Li</a> </h1>
-          <p> I am a research scientist working at ByteDance AI Lab. I am
+          <h1> Lei Li </h1>
+          <p>  I am
             developing scalable algorithms to learn and mine knowledge from
             data, with applications in NLP, machine translation, time series
             analysis, AI drug discovery, and robot learning. </p>
-          You are welcome to visit our lab located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the
-            center of Mountain View, California</a>, as well as offices in <a href="https://goo.gl/maps/uVThh4uUbKHRU9UR6">Beijing</a>
-          and <a href="https://goo.gl/maps/53dcSxVevQkXQEtZ6">Shanghai</a>.<br />
-          We have multiple open positions of researchers, software engineers,
-          and interns on machine learning, NLP, AI Drug Discovery, and robotics.
-          (email me at the address below) </div>
+          </div>
       </div>
       <div class="row">
         <div class="main col">
