--- a/research.html
+++ b/research.html
@@ -14,9 +14,9 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li class="active"><a href="research.html">Research</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
         <li><a href="pubs.html">Publications</a></li>
-        <li><a href="software.html">Software</a></li>
-        <li><a href="talks.html">Talks</a></li>
+        <li><a href="resource.html">Resource</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
       </ul>
       <div class="row">
@@ -24,9 +24,9 @@
           <h1>Research Projects</h1>
           <h2>Intelligent Writing and Deep Text Generation</h2>
           <ul>
-            <li>Xiaomingbot: an intelligent news-writing robot. [<a href="https://xiaomingbot.github.io">Demo</a>]</li>
             <li>developing controllable and interpretable methods for effective
               text generation. </li>
+            <li>Xiaomingbot: an intelligent news-writing robot. [<a href="https://xiaomingbot.github.io">Demo</a>]</li>
             <li>Bayesian sampling methods for controllable text generation: <a
                 href="pubs/miao2019cgmh.pdf">CGMH</a>,
               <a href="pubs/zhang2019generating.pdf">MHA</a>, <a href="pubs/zhang2020language.pdf">TSMH</a>,
@@ -41,6 +41,7 @@
               generation in the latent space. </li>
             <li>One embedding is not enough to represent a word! <a href="pubs/miao2019kernelized.pdf">Bayesian
                 Softmax</a> improves text generation. </li>
+            <li>Application in Advertising system: <a href="pubs/song2021triangular.pdf">Generating bidwords for sponsored search</a>, <a href="https://arxiv.org/abs/1912.01114">News headline editing</a>.</li>
           </ul>
           <h2>Multi-lingual Machine Translation </h2>
           <p>How to develop a unified model that can translation many language
@@ -56,7 +57,7 @@
               we build a universal pre-trained neural model that can improve on
               any pairs of language translation? Even if the languages do not
               occur in the pre-training corpus? The <a href="pubs/lin2020pre.pdf">mRASP
-                paper</a> tries to answer this question. </li>
+                </a> and <a href="pubs/pan2021contrastive.pdf">mRASP2</a> papers try to answer this question. Read <a href="https://medium.com/@panxiao1994/mrasp2-multilingual-nmt-advances-via-contrastive-learning-ac8c4c35d63">the blog post here</a>.</li>
             <li>Building a model like human who knows two languages: integrating
               the translation capabilities from one to the other and vice versa,
               as well as the capabilities to compose sentences in both
@@ -68,6 +69,7 @@
               catastrophic forgetting problem. check out <a href="pubs/liang2021finding.pdf">Prune-tune
                 paper</a>. [<a href="https://ohlionel.github.io/project/Prune-Tune/">project
                 page</a>]</li>
+            <li><a href="pubs/lin2021learning.pdf">Learning language-specific sub-network</a> is possible for multilingual neural machine translation. It improve zero-shot translation. </li>
             <li>How to achieve the top performance in multiple language
               directions in WMT 20 (Chinese-English, German-English,
               French-German, English-Khmer, English-Pashto). check out our
@@ -102,6 +104,10 @@
               idea based on consecutive decoding can achieve this. checkout
               COSTT <a href="https://arxiv.org/abs/2009.09737">paper</a>. [<a href="https://dqqcasia.github.io/projects/COSTT/">project
                 page</a>]</li>
+            <li>Study of human brain reveals that there is common region is the brain responsible for text and speech processing. 
+              Can a neural network map input of text and speech to the same semantic space? check out <a href="pubs/han2021learning.pdf">Chimera</a>, a model for speech-to-text translation, 
+              utilizes the notion of share-semantic space to further improve speech translation.  </li>
+            <li>Training techniques such as progressive multitask training improves speech translation. <a href="pubs/ye2021end.pdf">XSTNet</a> obtains the state-of-the-art translation performance on MuST-C dataset. </li>
           </ul>
           <ul>
           </ul>
