--- a/course/dl4mt21fa/LanguagePresentation.html
+++ b/course/dl4mt21fa/LanguagePresentation.html
@@ -3,6 +3,8 @@
   <head>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
+    <meta name="author" content="Lei Li" />
     <title>LanguagePresentation</title>
   </head>
   <body>
