--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
+    <meta name="author" content="Lei Li" />
     <title>DL4MT</title>
   </head>
   <body>
