--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -71,8 +71,8 @@
         href="course_policy.html">Link</a> carefully!<br>
     </p>
     <h2>Syllabus</h2>
-    <table width="100%" cellspacing="2" cellpadding="2" border="0">
-      <tbody>
+    <table >
+      <thead>
         <tr>
           <td>#<br>
           </td>
@@ -85,6 +85,8 @@
           <td>Homework<br>
           </td>
         </tr>
+      </thead>
+      <tbody>
         <tr>
           <td>1<br>
           </td>
