--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
         <div class="col c2"> <img src="leili-pic1.jpg" alt="" width="160" /> </div>
         <div class="col c10">
           <h1> <a href="index.html">Lei Li</a> </h1>
-          <p> I am a research scientist working at ByteDance AI Lab. I am
-            developing scalable algorithms to learn and mine knowledge from
-            data, with applications in NLP, machine translation, time series
-            analysis, AI drug discovery, and robot learning. </p>
-          You are welcome to visit our lab located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the
-            center of Mountain View, California</a>, as well as offices in <a href="https://goo.gl/maps/uVThh4uUbKHRU9UR6">Beijing</a>
-          and <a href="https://goo.gl/maps/53dcSxVevQkXQEtZ6">Shanghai</a>.<br />
-          We have multiple open positions of researchers, software engineers,
-          and interns on machine learning, NLP, AI Drug Discovery, and robotics.
-          (email me at the address below) </div>
+          <p> Assistant Professor <br>
+              Computer Science Department <br>
+              Univeristy of California Santa Barbara </p>
+          <p> I am developing scalable  algorithms that learn and mine knowledge from
+            all kinds of data. I am particularly interested in natural language processing, machine translation, 
+            and AI drug discovery. </p>
+          </div>
       </div>
       <div class="row">
         <div class="main col">
           <h3>News</h3>
           <ul>
-            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper accepted to InterSpeech 2021, about multi-task progressive pretraining for speech translation, achieving new SOTA results on MuST-C benchmarks. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> 6 papers are accepted to EMNLP 2021, three to main confrence, and three to the Findings of EMNLP. The topics are machine translation, information extraction, and summarization.</li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper extending the SOLO framework for instance segmentation is accepted to TPAMI. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper about 3D instance segmentation is accepted to IEEE Robotics and Automation Letters.</li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> Our paper Vocabulary Learning via Optimal Transport for Neural Machine Translation won <span style="color:red">the best paper award</span> at ACL 2021. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> Two papers are accepted to IROS 2021. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper is accepted to InterSpeech 2021, about multi-task progressive pretraining for speech translation, achieving new SOTA results on MuST-C benchmarks. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> Dr. Mingxuan Wang and I will be giving a <a href="TALKS/2021-ACL/">tutorial on Pre-training methods for Neural Machine Translation</a> at ACL 2021, July 31 </li>
             <li><img src="images/new-icon.gif" style="height:1.2em" /> 11 papers to appear at ACL 2021 (6 long, 4 findings, and 1 system demo). Strong results in machine translation and speech translation. Other topics include parallel generation, reasoning, summarization and information extraction. </li>
             <li><img src="images/new-icon.gif" style="height:1.2em" /> 1 paper is accepted to ICML 2021 about long horizon skill learning. </li>
             <li><img src="images/new-icon.gif" style="height:1.2em" /> 4 papers (1 main and 3 industry) are presenting at NAACL 2021. Check out the long paper about <a href="https://arxiv.org/abs/2009.09654">how visual imagination will influence machine translation capability</a>. </li>
