updating emnlp papers and research page

--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
                 Softmax</a> improves text generation. </li>
             <li>Application in Advertising system: <a href="pubs/song2021triangular.pdf">Generating bidwords for sponsored search</a>, <a href="https://arxiv.org/abs/1912.01114">News headline editing</a>.</li>
           </ul>
-          <h2>Multi-lingual Machine Translation </h2>
+          <h2>Multilingual Machine Translation </h2>
           <p>How to develop a unified model that can translation many language
             pairs well? Existing neural machine translation relies on rich
             parallel bilingual corpus, which not readily available for many
@@ -70,6 +70,8 @@
                 paper</a>. [<a href="https://ohlionel.github.io/project/Prune-Tune/">project
                 page</a>]</li>
             <li><a href="pubs/lin2021learning.pdf">Learning language-specific sub-network</a> is possible for multilingual neural machine translation. It improve zero-shot translation. </li>
+            <li><a href="">Graformer</a>: connecting pretrained BERT and GPT with a small bridge module to boost performance for multilingual machine translation. It furhter enables easy exploitation of pre-trained models using monolingual corpus in multiple languages. </li>
+            <li><a href="">CIAT</a>: designing small adapter subnets for multilingual machine translation. Should the adapter be serial or parallel to main backbone network? This study finds parallel adapter works better to counter interferences in langauges. </li>
             <li>How to achieve the top performance in multiple language
               directions in WMT 20 (Chinese-English, German-English,
               French-German, English-Khmer, English-Pashto). check out our
