--- a/resource.html
+++ b/resource.html
@@ -36,7 +36,7 @@
                 NeurST
               </a>: A toolbok with readily available models for neural machine translation and speech-to-text translation. 
             </li>
-            <li><a href="http://bayesianlogic.cs.berkeley.edu">BLOG</a>: a
+            <li><a href="https://bayesianlogic.github.io/">BLOG</a>: a
               probabilistic programming language for machine learning</li>
             <li><a href="https://github.com/lileicc/swift">Swift</a>: a compiler
               for the probabilistic programming language BLOG.</li>
