update pubs page

--- a/pubs.html
+++ b/pubs.html
@@ -153,6 +153,9 @@ extra="BIBTEXKEY">Abstract</a>
       </div>
     </div>
     <!-- Latest compiled and minified JavaScript -->
+    <div>
+      A slightly old list of <a href="publications.html">publications</a>.
+    </div>
     <script src="bootstrap.min.js"></script>
   </body>
 </html>
