updating course DL4MT

--- a/course/dl4mt21fa/LanguagePresentation.html
+++ b/course/dl4mt21fa/LanguagePresentation.html
@@ -8,11 +8,20 @@
     <title>LanguagePresentation</title>
   </head>
   <body>
+    <h1>Language Survey and Presentation for DL4MT</h1>
     In this short survey and presentation, you will study a language and
     give brief presentation about its linguistic and other related
-    facts, such as demographics, location, orthography, morphology,
-    syntax, phonology, corpus, tools, and translation systems and
-    performance. Please feel free to research on your own or consulting
+    facts, including 
+    <ul>
+      <li>  how the text is composed and written in the language, its orthography, morphology, syntax;
+      </li>
+      <li> how the language is spoken (some examples);
+      </li>
+      <li> where is it spoken, its location and demographics; </li>
+      <li> gather corpus and tools, gather monolingual and bilingual data for the language; </li>
+      <li> Current machine translation system (if any) and their performance</li>
+    </ul>
+    Please feel free to research on your own or consulting
     native speakers and/or language experts. <br>
     This project was inspired from <a moz-do-not-send="true"
 href="https://nyuad.nyu.edu/en/academics/divisions/science/faculty/nizar-habash.html">Nizar
@@ -28,6 +37,9 @@ href="https://sites.google.com/site/comse6998machinetranslation/language-in-10-m
       <li><a moz-do-not-send="true" href="https://www.omniglot.com/">Omniglot</a></li>
       <li><a moz-do-not-send="true" href="https://wals.info/">World
           Atlas of Language Structures online</a><br>
+      </li>
+      <li>
+        <a href="https://commoncrawl.org/">Common crawl</a>: open crawl of web data
       </li>
     </ul>
     You will prepare a few slides and present in one 10mins slot in
