--- a/course/dl4mt21fa/course_policy.html
+++ b/course/dl4mt21fa/course_policy.html
@@ -102,6 +102,10 @@ are
         &nbsp; If you are not sure whether or not something is
         appropriate, please ask the instructor or TA.</p>
     </blockquote>
+    <h2 style="margin-bottom:4.5pt"><a name="Health">Health and Safety</a></h2>
+    <blockquote style="margin-top:5.0pt;margin-bottom:5.0pt">
+      <p style="margin-bottom:4.5pt">Stay healthy and safe is top priority. Please adhere to UCSB campus requirement <a href="https://www.ucsb.edu/COVID-19-information/return-to-campus-requirements">https://www.ucsb.edu/COVID-19-information/return-to-campus-requirements</a>&nbsp;&nbsp;</p>
+    </blockquote>
     <h2 style="margin-bottom:4.5pt"><a name="Disabilities">Students with
         Disabilities</a></h2>
     <blockquote style="margin-top:5.0pt;margin-bottom:5.0pt">
