--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
-    <meta name="author" content="Lei Li" />
+    <link rel="stylesheet" type="text/css" href="../../style/origo.css"
+      media="all">
+    <meta name="author" content="Lei Li">
     <title>DL4MT</title>
   </head>
   <body>
@@ -22,14 +23,15 @@
     well as engineering techniques to speed-up computation for MT
     models. <br>
     <h2>Instructor</h2>
-    <p><a moz-do-not-send="true" href="https://www.cs.ucsb.edu/~lilei">Lei
-
-
+    <p><a href="https://www.cs.ucsb.edu/~lilei">Lei
         Li</a><br>
     </p>
     <h2>Time and Location</h2>
-    <p>Monday/Wednesday 11:00am-12:50pm&nbsp; Phelps 3526<br>
+    <p>Monday/Wednesday 11:00am-12:50pm&nbsp; Phelps 3526 (also on zoom)<br>
     </p>
+    <h2>Office hour: <br>
+    </h2>
+    Via zoom with instructor by appointment.<br>
     <h2>Textbook</h2>
     <ul>
       <li>
@@ -60,20 +62,35 @@
     </p>
     <h2>Grading</h2>
     <ul>
-      <li>Homework 40%<br>
+      <li>Homework<br>
       </li>
-      <li>In-class Presentation: <a moz-do-not-send="true"
-          href="LanguagePresentation.html">Language in 10 mins</a> 10%</li>
-      <li>Project: 50%</li>
+      <ul>
+        <li>HW1-3: separate assignments (10% each)</li>
+        <li>HW4: In-class Presentation <a 
+            href="LanguagePresentation.html">Language in 10 mins (10%)<br>
+          </a></li>
+        <li>HW5: MT Blog (20%)</li>
+        <li>Turn-in homework at Gradescope: <a 
+            href="https://www.gradescope.com/courses/319418">https://www.gradescope.com/courses/319418</a><br>
+        </li>
+      </ul>
+      <li>Project: 40%</li>
+      <li>Participation in active discussion (5)<br>
+      </li>
     </ul>
+    <h2>Discussion Forum</h2>
+    <p>Piazza: <a 
+        href="https://piazza.com/class/ksousnwx3cl1ux">
+        https://piazza.com/class/ksousnwx3cl1ux </a><br>
+        Piazza is main channel of communication. Questions can be posted and discussed here. 
+    </p>
     <h2>Policy</h2>
-    <p>Please read the following <a moz-do-not-send="true"
+    <p>Please read the following <a 
         href="course_policy.html">Link</a> carefully!<br>
     </p>
     <h2>Syllabus</h2>
-    <table >
-      <thead>
-        <tr>
+    <table>
+      <thead> <tr>
           <td>#<br>
           </td>
           <td>Date<br>
@@ -85,8 +102,7 @@
           <td>Homework<br>
           </td>
         </tr>
-      </thead>
-      <tbody>
+      </thead> <tbody>
         <tr>
           <td>1<br>
           </td>
@@ -95,9 +111,12 @@
           <td>Introduction to MT, History, Probability, Matrix and
             vectors, Loss<br>
           </td>
-          <td><br>
+          <td><a moz-do-not-send="true"
+              href="Weaver_1949_Translation.pdf">Weaver 1949</a>, <a
+              moz-do-not-send="true"
+              href="https://aclanthology.org/J93-2003.pdf">Brown 1993</a>
           </td>
-          <td>HW1 </td>
+          <td>HW1</td>
         </tr>
         <tr>
           <td>2<br>
@@ -106,7 +125,18 @@
           </td>
           <td>Data, Vocabulary and Evaluation<br>
           </td>
-          <td><br>
+          <td><a moz-do-not-send="true"
+              href="https://aclanthology.org/P02-1040/">Papineni 2002
+              BLEU</a><br>
+            <a moz-do-not-send="true"
+              href="https://aclanthology.org/W18-6319/">Post 2018
+              SacreBLEU</a><br>
+            <a moz-do-not-send="true"
+              href="https://arxiv.org/abs/2104.14478">Freitag 2021 Human
+              evaluation</a><br>
+            <a moz-do-not-send="true"
+              href="https://aclanthology.org/P16-1162/">Sennrich 2016
+              BPE</a><br>
           </td>
           <td><br>
           </td>
@@ -167,15 +197,14 @@
           </td>
           <td><br>
           </td>
-          <td>Project Proposal Due<br>
-          </td>
+          <td>Project Proposal Due </td>
         </tr>
         <tr>
           <td>8<br>
           </td>
           <td>W 10/20 </td>
-          <td>Incorporating pre-trained language model into NMT<br>
-          </td>
+          <td>Low-resource and Unsupervised NMT, Incorporating
+            pre-trained language model into NMT&nbsp; </td>
           <td><br>
           </td>
           <td><br>
@@ -185,8 +214,7 @@
           <td>9<br>
           </td>
           <td>M 10/25 </td>
-          <td>Low-resource scenario and Unsupervised Machine Translation<br>
-          </td>
+          <td>Multilingual NMT, Pre-training, Augmentation,&nbsp; </td>
           <td><br>
           </td>
           <td>HW2 due, HW3 </td>
@@ -195,8 +223,8 @@
           <td>10<br>
           </td>
           <td>W 10/27 </td>
-          <td>Multilingual NMT, Pre-training, Augmentation,&nbsp; <br>
-          </td>
+          <td>Improving Structure Capacity, continual learning, adapter,
+            language-specific sub-network </td>
           <td><br>
           </td>
           <td><br>
@@ -206,8 +234,7 @@
           <td>11<br>
           </td>
           <td>M 11/1 </td>
-          <td>Improving Structure Capacity, continual learning, adapter,
-            language-specific sub-network </td>
+          <td>Data mining for MT</td>
           <td><br>
           </td>
           <td><br>
@@ -217,8 +244,7 @@
           <td>12<br>
           </td>
           <td>W 11/3 </td>
-          <td>Data mining for MT<br>
-          </td>
+          <td>Speech Translation </td>
           <td><br>
           </td>
           <td><br>
@@ -228,29 +254,26 @@
           <td>13<br>
           </td>
           <td>M 11/8 </td>
-          <td>Speech Translation<br>
-          </td>
+          <td>Pre-training for Speech Translation </td>
           <td><br>
           </td>
-          <td>HW3 due, HW4<br>
+          <td>HW3 due<br>
           </td>
         </tr>
         <tr>
           <td>14<br>
           </td>
           <td>W 11/10 </td>
-          <td>Pre-training for Speech Translation<br>
-          </td>
+          <td>Speed-up inference: Parallel Generation </td>
           <td><br>
           </td>
-          <td>Project midterm report due<br>
-          </td>
+          <td>Project midterm report due </td>
         </tr>
         <tr>
           <td>15<br>
           </td>
           <td>M 11/15 </td>
-          <td>Speed-up inference: Parallel Generation </td>
+          <td>Scaling Training and Hardware acceleration for NMT</td>
           <td><br>
           </td>
           <td><br>
@@ -260,8 +283,7 @@
           <td>16<br>
           </td>
           <td>W 11/17 </td>
-          <td>Scaling Training and Computation for NMT<br>
-          </td>
+          <td>Advanced vocabulary and embedding learning </td>
           <td><br>
           </td>
           <td><br>
@@ -271,18 +293,18 @@
           <td>17<br>
           </td>
           <td>M 11/22 </td>
-          <td>Advanced vocabulary and embedding learning </td>
+          <td>Interactive Machine Translation, Computer-aided
+            Translation</td>
           <td><br>
           </td>
-          <td>HW4 due </td>
+          <td><br>
+          </td>
         </tr>
         <tr>
           <td>18<br>
           </td>
           <td>W 11/24 </td>
-          <td>Interactive Machine Translation, Computer-aided
-            Translation<br>
-          </td>
+          <td>Applications to other tasks, drug discovery, material </td>
           <td><br>
           </td>
           <td><br>
@@ -292,7 +314,8 @@
           <td>19<br>
           </td>
           <td>M 11/29 </td>
-          <td>Applications to other tasks, drug discovery, material </td>
+          <td>Industrial Presentation: Lessons from Building Successful
+            MT Products </td>
           <td><br>
           </td>
           <td><br>
@@ -302,35 +325,10 @@
           <td>20<br>
           </td>
           <td>W 12/1 </td>
-          <td>Industrial Presentation: Lessons from Building Successful
-            MT Products </td>
+          <td>Project Poster Presentation</td>
           <td><br>
           </td>
-          <td><br>
-          </td>
-        </tr>
-        <tr>
-          <td><br>
-          </td>
-          <td>F 12/3<br>
-          </td>
-          <td><br>
-          </td>
-          <td><br>
-          </td>
-          <td>Final project due </td>
-        </tr>
-        <tr>
-          <td><br>
-          </td>
-          <td>M 12/6<br>
-          </td>
-          <td>Project Poster Presentation<br>
-          </td>
-          <td><br>
-          </td>
-          <td><br>
-          </td>
+          <td>Final project report due </td>
         </tr>
       </tbody>
     </table>
