adding lecture1 slides

--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -69,7 +69,7 @@
         <li>HW4: In-class Presentation <a 
             href="LanguagePresentation.html">Language in 10 mins (10%)<br>
           </a></li>
-        <li>HW5: MT Blog (20%)</li>
+        <li>HW5: MT Blog (15%)</li>
         <li>Turn-in homework at Gradescope: <a 
             href="https://www.gradescope.com/courses/319418">https://www.gradescope.com/courses/319418</a><br>
         </li>
@@ -108,8 +108,7 @@
           </td>
           <td>M 9/27<br>
           </td>
-          <td>Introduction to MT, History, Probability, Matrix and
-            vectors, Loss<br>
+          <td><a href="lecture1intro.pdf">Introduction to MT, History, Probability, Statsitical MT</a><br>
           </td>
           <td><a moz-do-not-send="true"
               href="Weaver_1949_Translation.pdf">Weaver 1949</a>, <a
@@ -325,7 +324,7 @@
           <td>20<br>
           </td>
           <td>W 12/1 </td>
-          <td>Project Poster Presentation</td>
+          <td>(tentative) Project Poster Presentation</td>
           <td><br>
           </td>
           <td>Final project report due </td>
