--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -122,7 +122,7 @@
           </td>
           <td>W 9/29<br>
           </td>
-          <td>Data, Vocabulary and Evaluation<br>
+          <td><a href="lecture2evaluation.pdf">Data, Vocabulary and Evaluation</a>
           </td>
           <td><a moz-do-not-send="true"
               href="https://aclanthology.org/P02-1040/">Papineni 2002
@@ -135,7 +135,7 @@
               evaluation</a><br>
             <a moz-do-not-send="true"
               href="https://aclanthology.org/P16-1162/">Sennrich 2016
-              BPE</a><br>
+              BPE</a>
           </td>
           <td><br>
           </td>
@@ -145,10 +145,9 @@
           </td>
           <td>M 10/4<br>
           </td>
-          <td>Basic Neural Network Layers, Embedding, Feedforward,
-            Softmax<br>
+          <td>Basic Neural Network Layers, Embedding, Model Training<br>
           </td>
-          <td><br>
+          <td>Chap 6 of DL book.
           </td>
           <td><br>
           </td>
@@ -324,10 +323,19 @@
           <td>20<br>
           </td>
           <td>W 12/1 </td>
-          <td>(tentative) Project Poster Presentation</td>
+          <td>(tentative) final project discussion</td>
           <td><br>
           </td>
-          <td>Final project report due </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><br>
+          </td>
+          <td>M 12/6 </td>
+          <td>Project Poster Presentation</td>
+          <td><br>
+          </td>
+          <td>Final project report due</td>
         </tr>
       </tbody>
     </table>
