--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -145,7 +145,7 @@
           </td>
           <td>M 10/4<br>
           </td>
-          <td>Basic Neural Network Layers, Embedding, Model Training<br>
+          <td><a href="lecture3neuralnet.pdf">Basic Neural Network Layers, Embedding, Model Training</a><br>
           </td>
           <td>Chap 6 of DL book.
           </td>
@@ -157,9 +157,11 @@
           </td>
           <td>W 10/6<br>
           </td>
-          <td>CNN, LSTM, Encoder-decoder <br>
+          <td><a href="lecture4cnn.pdf">CNN</a><br>
           </td>
-          <td><br>
+          <td><a href="https://www.deeplearningbook.org/contents/convnets.html">Chap 9 of DL Book.</a><br>
+            <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/He_Deep_Residual_Learning_CVPR_2016_paper.pdf">He 2016 ResNet</a><br>
+            <a href="https://arxiv.org/abs/1404.2188">Kalchbrenner 2014 CNN Sequence</a>
           </td>
           <td><br>
           </td>
@@ -169,7 +171,7 @@
           </td>
           <td>M 10/11<br>
           </td>
-          <td>Transformer </td>
+          <td>Encoder-decoder, LSTM, Transformer </td>
           <td><br>
           </td>
           <td>HW1 due, HW2<br>
